@@ -1,3 +1,8 @@
+2006-12-5  Ville Vainio  <vivainio@gmail.com>
+
+	* Magic.py, iplib.py, completer.py: Apply R. Bernstein's
+	pydb patch 4 (rm debug printing, py 2.5 checking)
+
 2006-11-30  Walter Doerwald  <walter@livinglogic.de>
 	* IPython/Extensions/ibrowse.py: Add two new commands to ibrowse:
 	"refresh" (mapped to "r") refreshes the screen by restarting the iterator.
